--- a/EpServerEngine/EpServerEngine/EpServerEngine100.vcxproj.filters
+++ b/EpServerEngine/EpServerEngine/EpServerEngine100.vcxproj.filters
@@ -380,6 +380,9 @@
     <ClInclude Include="EpLibraryHeaders\epWinResizer.h">
       <Filter>EpLibraryHeaders</Filter>
     </ClInclude>
+    <ClInclude Include="EpLibraryHeaders\epCoroutine.h">
+      <Filter>EpLibraryHeaders</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\LICENSE">
