--- a/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine80.vcproj
@@ -833,6 +833,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\EpLibraryHeaders\epCoroutine.h"
+				>
+			</File>
+			<File
 				RelativePath=".\EpLibraryHeaders\epCriticalSectionEx.h"
 				>
 			</File>
