--- a/EpServerEngine2.0/EpServerEngine/EpServerEngine100.vcxproj.filters
+++ b/EpServerEngine2.0/EpServerEngine/EpServerEngine100.vcxproj.filters
@@ -578,6 +578,9 @@
     <ClInclude Include="EpLibraryHeaders\epWinResizer.h">
       <Filter>EpLibraryHeaders</Filter>
     </ClInclude>
+    <ClInclude Include="EpLibraryHeaders\epCoroutine.h">
+      <Filter>EpLibraryHeaders</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Sources\epBasePacketProcessor.cpp">
