--- a/EpServerEngine2.0/EpServerEngine/EpServerEngine80.vcproj
+++ b/EpServerEngine2.0/EpServerEngine/EpServerEngine80.vcproj
@@ -1285,6 +1285,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\EpLibraryHeaders\epCoroutine.h"
+				>
+			</File>
+			<File
 				RelativePath=".\EpLibraryHeaders\epCriticalSectionEx.h"
 				>
 			</File>
