--- a/EpServerEngine2.0/EpServerEngine/EpServerEngine90.vcproj
+++ b/EpServerEngine2.0/EpServerEngine/EpServerEngine90.vcproj
@@ -1275,6 +1275,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\EpLibraryHeaders\epCoroutine.h"
+				>
+			</File>
+			<File
 				RelativePath=".\EpLibraryHeaders\epCriticalSectionEx.h"
 				>
 			</File>
