--- a/EpServerEngine/EpServerEngine/EpServerEngine110.vcxproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine110.vcxproj
@@ -395,6 +395,7 @@
     <ClInclude Include="EpLibraryHeaders\epBaseTextFile.h" />
     <ClInclude Include="EpLibraryHeaders\epBinaryFile.h" />
     <ClInclude Include="EpLibraryHeaders\epCmdLineOptions.h" />
+    <ClInclude Include="EpLibraryHeaders\epCoroutine.h" />
     <ClInclude Include="EpLibraryHeaders\epEventEx.h" />
     <ClInclude Include="EpLibraryHeaders\epIpcClient.h" />
     <ClInclude Include="EpLibraryHeaders\epIpcClientInterfaces.h" />
