--- a/EpServerEngine/EpServerEngine/EpServerEngine90.vcproj
+++ b/EpServerEngine/EpServerEngine/EpServerEngine90.vcproj
@@ -823,6 +823,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\EpLibraryHeaders\epCoroutine.h"
+				>
+			</File>
+			<File
 				RelativePath=".\EpLibraryHeaders\epCriticalSectionEx.h"
 				>
 			</File>
